src/styles.scss
@use "./tailwind";

@import "primeicons/primeicons.css";

$background-color_1: color-mix(
  in srgb,
  var(--p-primary-color) 70%,
  transparent
);

.bg-primary\/70 {
  background-color: $background-color_1;
}

.kt-card-accent .kt-card-content {
  border-radius: 1.5rem !important;
}

/* Desactivar sticky header en móvil */
@media (max-width: 1023px) {
  #header[data-kt-sticky="true"] {
    position: relative !important;
    
    &.kt-sticky-on {
      position: relative !important;
      background: transparent !important;
      box-shadow: none !important;
    }
  }
}

